// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BackToTopButton correctly as not visible 1`] = `
<a
  className="back-to-top"
  onClick={[Function]}
/>
`;

exports[`should render BackToTopButton correctly as visible 1`] = `
<a
  className="show back-to-top"
  onClick={[Function]}
/>
`;
